# Plot-OpenFOAM-Residuals

./: .gitignore  README.md  index.html  netlify.toml  pyproject.toml  requirements.txt  streamlit_app.py  verify.py
.Jules/: palette.md
.github/workflows/: deploy-pages.yml
.jules/: bolt.md
web/: app.js  index.html  manifest.json  service-worker.js  styles.css
